# Ticker_Data_Streamlit

./: README.md  Streamlit_app.ipynb  Streamlit_app.py  pyproject.toml
ticker_data_gzip/issuer_code=1AE/: 49ba3daabd154903b73fdd481efbd24c-0.parquet
ticker_data_gzip/issuer_code=1MC/: 49ba3daabd154903b73fdd481efbd24c-0.parquet
ticker_data_gzip/issuer_code=AEE/: 49ba3daabd154903b73fdd481efbd24c-0.parquet
ticker_data_gzip/issuer_code=NRZ/: 49ba3daabd154903b73fdd481efbd24c-0.parquet
ticker_data_gzip/issuer_code=REZ/: 49ba3daabd154903b73fdd481efbd24c-0.parquet
